--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,69 @@
-title: My First Github Pages with from config.yml
-baseurl: "CS_499_eProtfolio"
+#title: My First Github Pages with from config.yml
+#baseurl: "CS_499_eProtfolio"
 
-markdown: kramdown
-theme: minima
-plugins:
-   - jekyll-feed
+#markdown: kramdown
+#theme: minima
+#plugins:
+ #  - jekyll-feed
+# Build settings
+gems:
+  - jemoji
+  - jekyll-paginate
+
+# Site settings
+title: "eProtfolio"
+description: > # this means to ignore newlines until "email:"
+   A Jekyll theme - Medium inspired
+
+email: a-mail@mail.mail
+#blog logo
+#float_logo: true # true, false (default)
+
+# blog cover
+#cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+
+name: 'SP'
+author: 'SP'
+#author_image: "/assets/images/author.jpg"
+
+paginate:	5
+
+#url: "http://myblog.***.***" # the base hostname & protocol for your site
+baseurl: "CS_499_ePotfolio"
+#used to display twitter cards
+#twitter_handle: '@dirkfabisch'
+
+#fill in disqus shortname to use disqus
+#disqus: disqus-shortname
+
+#google_analytics: UA-XXXXX-X
+
+# social icons and sharing options
+social:
+  - icon:	twitter
+    #url:	https://twitter.com/dirkfabisch
+    desc: Follow me on twitter
+    share_url: http://twitter.com/share
+    share_title: ?text=
+    share_link: "&amp;url="
+
+#  - icon:	facebook
+#    url:	https://facebook.com/???
+#    desc: Connect with me facebook
+#    share_url: https://www.facebook.com/sharer.php
+#    share_title: ?t=
+#    share_link: "&amp;u="
+
+  - icon:	github
+    url:	https://github.com/samip18
+    desc:	Fork me on github
+    share_url:
+    share_title:
+    share_link:
+
+#  - icon:	google-plus
+#    url:	https://google.com/???
+#    desc:	Add me on google+
+#    share_url:
+#    share_title:
+#    share_link:
